--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.6.0",
     "react-scripts": "5.0.1",
     "react-uuid": "^2.0.0",
+    "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
