--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "^5.0.1",
     "react-uuid": "^2.0.0",
     "reactjs-popup": "^2.0.5",
+    "saas": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
